--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 @font-face {
 	font-family: 'icomoon';
-	src:url('fonts/icomoon.eot?ia66r1');
-	src:url('fonts/icomoon.eot?#iefixia66r1') format('embedded-opentype'),
-		url('fonts/icomoon.ttf?ia66r1') format('truetype'),
-		url('fonts/icomoon.woff?ia66r1') format('woff'),
-		url('fonts/icomoon.svg?ia66r1#icomoon') format('svg');
+	src:url('fonts/icomoon.eot?-lm737t');
+	src:url('fonts/icomoon.eot?#iefix-lm737t') format('embedded-opentype'),
+		url('fonts/icomoon.ttf?-lm737t') format('truetype'),
+		url('fonts/icomoon.woff?-lm737t') format('woff'),
+		url('fonts/icomoon.svg?-lm737t#icomoon') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
