add arrow-left icon

--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,9 @@
 	-moz-osx-font-smoothing: grayscale;
 }
 
+.im-arrow-left:before {
+	content: "\e60a";
+}
 .im-home:before {
 	content: "\e609";
 }
