--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,12 @@
 	-moz-osx-font-smoothing: grayscale;
 }
 
+.im-star:before {
+	content: "\e900";
+}
+.im-star-light:before {
+	content: "\e901";
+}
 .im-arrow-left:before {
 	content: "\e60a";
 }
