--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,10 @@
 @font-face {
 	font-family: 'icomoon';
-	src:url('../fonts/icomoon.eot?-28zuta');
-	src:url('../fonts/icomoon.eot?#iefix-28zuta') format('embedded-opentype'),
-		url('../fonts/icomoon.ttf?-28zuta') format('truetype'),
-		url('../fonts/icomoon.woff?-28zuta') format('woff'),
-		url('../fonts/icomoon.svg?-28zuta#icomoon') format('svg');
+	src:url('../fonts/icomoon.eot?-aek2u5');
+	src:url('../fonts/icomoon.eot?#iefix-aek2u5') format('embedded-opentype'),
+		url('../fonts/icomoon.ttf?-aek2u5') format('truetype'),
+		url('../fonts/icomoon.woff?-aek2u5') format('woff'),
+		url('../fonts/icomoon.svg?-aek2u5#icomoon') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -24,6 +24,15 @@
 	-moz-osx-font-smoothing: grayscale;
 }
 
+.im-product-page-cloud:before {
+    content: "\e907";
+}
+.im-product-page-controls:before {
+    content: "\e908";
+}
+.im-product-page-note:before {
+    content: "\e909";
+}
 .im-file-pdf-o:before {
     content: "\e906";
 }
