update product page icons

--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,10 @@
 @font-face {
 	font-family: 'icomoon';
-	src:url('../fonts/icomoon.eot?-aek2u5');
-	src:url('../fonts/icomoon.eot?#iefix-aek2u5') format('embedded-opentype'),
-		url('../fonts/icomoon.ttf?-aek2u5') format('truetype'),
-		url('../fonts/icomoon.woff?-aek2u5') format('woff'),
-		url('../fonts/icomoon.svg?-aek2u5#icomoon') format('svg');
+	src:url('../fonts/icomoon.eot?-gtsm8m');
+	src:url('../fonts/icomoon.eot?#iefix-gtsm8m') format('embedded-opentype'),
+		url('../fonts/icomoon.ttf?-gtsm8m') format('truetype'),
+		url('../fonts/icomoon.woff?-gtsm8m') format('woff'),
+		url('../fonts/icomoon.svg?-gtsm8m#icomoon') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
