--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,10 @@
 @font-face {
 	font-family: 'icomoon';
-	src:url('../fonts/icomoon.eot?-gtsm8m');
-	src:url('../fonts/icomoon.eot?#iefix-gtsm8m') format('embedded-opentype'),
-		url('../fonts/icomoon.ttf?-gtsm8m') format('truetype'),
-		url('../fonts/icomoon.woff?-gtsm8m') format('woff'),
-		url('../fonts/icomoon.svg?-gtsm8m#icomoon') format('svg');
+	src:url('../fonts/icomoon.eot?-x83dol');
+	src:url('../fonts/icomoon.eot?#iefix-x83dol') format('embedded-opentype'),
+		url('../fonts/icomoon.ttf?-x83dol') format('truetype'),
+		url('../fonts/icomoon.woff?-x83dol') format('woff'),
+		url('../fonts/icomoon.svg?-x83dol#icomoon') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -24,6 +24,9 @@
 	-moz-osx-font-smoothing: grayscale;
 }
 
+.im-product-page-play:before {
+    content: "\e90a";
+}
 .im-product-page-cloud:before {
     content: "\e907";
 }
