--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('../fonts/icomoon.eot?nluf8c');
-  src:  url('../fonts/icomoon.eot?nluf8c#iefix') format('embedded-opentype'),
-    url('../fonts/icomoon.ttf?nluf8c') format('truetype'),
-    url('../fonts/icomoon.woff?nluf8c') format('woff'),
-    url('../fonts/icomoon.svg?nluf8c#icomoon') format('svg');
+  src:  url('../fonts/icomoon.eot?hb2ro9');
+  src:  url('../fonts/icomoon.eot?hb2ro9#iefix') format('embedded-opentype'),
+    url('../fonts/icomoon.ttf?hb2ro9') format('truetype'),
+    url('../fonts/icomoon.woff?hb2ro9') format('woff'),
+    url('../fonts/icomoon.svg?hb2ro9#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -24,6 +24,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.im-pulse:before {
+  content: "\e913";
+}
 .im-waveform:before {
   content: "\e912";
 }
@@ -32,9 +35,11 @@
 }
 .im-guitar2:before {
   content: "\e90f";
+  color: #787873;
 }
 .im-note:before {
   content: "\e910";
+  color: #787873;
 }
 .im-paper-stack:before {
   content: "\e90e";
@@ -104,11 +109,12 @@
 }
 .im-flag:before {
   content: "\e602";
+  color: #fff;
 }
 .im-layers:before {
   content: "\e604";
+  color: #fff;
 }
 .im-menu-dots:before {
   content: "\e600";
 }
-
